# libp2p-bittorrent-protocol

./: Cargo.toml  README.md  btt.proto  regen_structs_proto.sh
examples/: bittorrent.rs
src/: behavior.rs  bitfield.rs  error.rs  handler.rs  lib.rs  metainfo.rs  piece.rs  pieces.rs  protocol.rs  torrent.rs  torrentbuilder.rs  tracker.rs  util.rs
src/behavior/: mod.rs
src/disk/: block.rs  context.rs  error.rs  file.rs  fs.rs  manager.rs  message.rs  mod.rs  native.rs  torrent.rs
src/peer/: builder.rs  mod.rs  piece.rs  torrent.rs
src/proto/: codec.rs  message.rs  mod.rs  tracker.rs
src/protobuf_structs/: btt.rs  mod.rs
src/torrent/: builder.rs  mod.rs
tracker/: Cargo.toml
tracker/src/: bucket.rs  lib.rs  mod.rs  msg.rs
