[package]
name = "libp2p-bittorrent-protocol"
version = "0.1.0"
edition = "2018"
authors = ["matthiasseitz <matthias.seitz@tum.de>"]
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = "0.1"
log = "0.4"
libp2p-core = "0.13"
libp2p-swarm = "0.3"
smallvec = "0.6"
bytes = "0.4"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-fs = "0.1"
rand = "0.7.2"
sha1 = "0.6.0"
sha2 = "0.8.0"
wasm-timer = "0.1"
bendy = "0.2"
chrono = "0.4"
bit-vec = "0.6"
snafu = "0.5"
byteorder = "1.3"
walkdir = "2.2"
fnv = "1.0"
lru-cache = "0.1"

[features]

[dev-dependencies]
tokio = "0.1"
libp2p-tcp = "0.13"
libp2p = "0.13"
libp2p-kad = "0.13"